# flake-sync-status

./: .gitignore  Cargo.toml  ERROR_HANDLING.org  README.org  deny.toml  flake.nix  rust-template.json  tasks.org
crates/cli/: Cargo.toml
crates/cli/src/: color.rs  config.rs  flake.rs  host.rs  logging.rs  main.rs  output.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: logging.rs
nix/modules/: darwin.nix
